# ChipBuilder

./: CMakeLists.txt  LICENSE  README.md  build.sh  default_rules.json  drc_test  main.cpp  rules.json  rulesiiiiii.json  rulllll.json
Editor/controllers/: commands.hpp  controllers.pro  metal_controller.cpp  metal_controller.hpp  scene_controller.cpp  scene_controller.hpp
Editor/views/: layer_view.cpp  layer_view.hpp  metal.hpp  metal_view.cpp  metal_view.hpp  scene_view.cpp  scene_view.hpp  toolbar.hpp  view.cpp  view.hpp  views.pro  views_global.h
cli/include/: command.hpp  lexer.hpp  parser.hpp
cli/src/: lexer.cpp  parser.cpp
cli_view/src/: view.cpp
commands/include/: context.hpp
concepts/include/: concepts.hpp
design_models/: CMakeLists.txt  build.sh
design_models/include/: concepts.hpp  geometry.hpp  layers.hpp
drc/: drc.hpp  drc_rules.hpp
editor/Runner/: Runner.pro  main.cpp  mainwindow.cpp  mainwindow.h  moc_predefs.h
editor/editor_models/: editor_models.cpp  editor_models.h  (+4 more)
gui/: gui.pro  layer.cpp  layer.hpp  main.cpp  mainwindow.cpp  mainwindow.h  scene.cpp  scene.hpp  toolbar.cpp  toolbar.hpp  view.cpp  view.hpp
incremental_drc/: incremental_drc.hpp
particle_simulation/: CMakeLists.txt  build.sh  main.cpp
particle_simulation/include/: errors.hpp  exceptions.hpp  glfw.hpp  mesh.hpp  shaders.hpp  sphere.hpp  window.hpp
particle_simulation/models/: carriers.hpp  dopants.hpp  overloads.hpp
particle_simulation/src/: errors.cpp  exceptions.cpp  glfw.cpp  mesh.cpp  shaders.cpp  sphere.cpp  window.cpp
tests/: drc_test.cpp
(+94 files in other folders)
